Fix <webview> cursors with --site-per-process and --isolate-extensions.

When running BrowserPlugin without either flag, the guest sets the
cursor which is forwarded to the embedder. The embedder saves the
current guest cursor and will set the cursor to the guest value when
processing mouse events for the guest.

When running with either --site-per-process or --isolate-extensions, the
embedding renderer no longer receives the guest's mouse events which are
how the cursor ends up being set. In this case, directly set the cursor
with the owner view.

BUG=595446
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_site_isolation

Review URL: https://codereview.chromium.org/1845083002

Cr-Commit-Position: refs/heads/master@{#384193}